[package]
name = "nginx-ecm-rs"
version = "0.2.0"
authors = ["Teodor Milkov <zimage@icdsoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
structopt = "0.3.25"
chrono = "0.4.19"
chrono-english = "0.1.6"
lazy_static = "1.4.0"

[dev-dependencies]
assert_cmd = "2.0.2"
predicates = "2.0.3"
tempfile = "3.2.0"
proptest = "1.0.0"
